fixed vorteile icons etc

--- a/components/Vorteile.html
+++ b/components/Vorteile.html
@@ -45,17 +45,13 @@
 
             <!--            Vorteil 1-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("umweltschutz", "plus_icon1", "minus_icon1")'> Umweltschonend
-                <i class="material-icons" id="plus_icon1">add</i>
-                <i class="material-icons" id="minus_icon1">remove</i>
+                 onclick='showfunction("umweltschutz", "plus_icon1", "minus_icon1")'>
+                <i class="material-icons left">local_florist</i>
+                Umweltschonend
+                <i class="material-icons plus" id="plus_icon1">add</i>
+                <i class="material-icons minus" id="minus_icon1">remove</i>
             </div>
-
-            <!--            Titel-Balken-->
-            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
-                <i class="material-icons">local_florist</i><span> Umweltschonend</span>
-            </div>
-
-            <div id="umweltschutz" class="vorteile">
+            <div id="vorteil1" class="vorteile">
                 <div class="row">
                     <div class="col s12 l3">
                         <img class="resizeableimg" src="img/vorteile_images/umweltschonend/umweltschutz_berge.png">
@@ -92,14 +88,11 @@
 
             <!--            Vorteil 2-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil2", "plus_icon2", "minus_icon2")'> Energieeffizient
-                <i class="material-icons" id="plus_icon2">add</i>
-                <i class="material-icons" id="minus_icon2">remove</i>
-            </div>
-
-            <!--            Titel-Balken-->
-            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
-                <i class="material-icons">power</i><span> Energieeffizient</span>
+                 onclick='showfunction("vorteil2", "plus_icon2", "minus_icon2")'>
+                <i class="material-icons left">power</i><span> Energieeffizient</span>
+                Energieeffizient
+                <i class="material-icons plus" id="plus_icon2">add</i>
+                <i class="material-icons minus" id="minus_icon2">remove</i>
             </div>
 
             <div id="vorteil2" class="vorteile">
@@ -120,14 +113,11 @@
 
             <!--            Vorteil 3-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil3", "plus_icon3", "minus_icon3")'>Betriebs- und Wartungskosten
-                <i class="material-icons" id="plus_icon3">add</i>
-                <i class="material-icons" id="minus_icon3">remove</i>
-            </div>
-
-            <!--            Titel-Balken-->
-            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
-                <i class="material-icons">build</i><span> Betriebs- und Wartungskosten</span>
+                 onclick='showfunction("vorteil3", "plus_icon3", "minus_icon3")'>
+                <i class="material-icons left">build</i>
+                Betriebs- und Wartungskosten
+                <i class="material-icons plus" id="plus_icon3">add</i>
+                <i class="material-icons minus" id="minus_icon3">remove</i>
             </div>
 
             <div id="vorteil3" class="vorteile">
@@ -176,14 +166,8 @@
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
                  onclick='showfunction("vorteil4", "plus_icon4", "minus_icon4")'>
                 <i class="material-icons left">directions_bus</i> Integration in ein Fahrzeug
-                <i class="material-icons" id="plus_icon4">add</i>
-                <i class="material-icons" id="minus_icon4">remove</i>
-            </div>
-
-
-<!--            Titel-Balken-->
-            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
-                <i class="material-icons">directions_bus</i><span> Integration in ein Fahrzeug</span>
+                <i class="material-icons plus" id="plus_icon4">add</i>
+                <i class="material-icons minus" id="minus_icon4">remove</i>
             </div>
 
             <div id="vorteil4" class="vorteile">
@@ -205,14 +189,11 @@
 
             <!--            Vorteil 5-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil5", "plus_icon5", "minus_icon5")'>Features
-                <i class="material-icons" id="plus_icon5">add</i>
-                <i class="material-icons" id="minus_icon5">remove</i>
-            </div>
-
-            <!--            Titel-Balken-->
-            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
-                <i class="material-icons">star</i><span> Features</span>
+                 onclick='showfunction("vorteil5", "plus_icon5", "minus_icon5")'>
+                <i class="material-icons left">star</i>
+                Features
+                <i class="material-icons plus" id="plus_icon5">add</i>
+                <i class="material-icons minus" id="minus_icon5">remove</i>
             </div>
 
             <div id="vorteil5" class="vorteile">
@@ -274,14 +255,11 @@
 
             <!--            Vorteil 6-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("vorteil6", "plus_icon6", "minus_icon6")'>Vergleich
-                <i class="material-icons" id="plus_icon6">add</i>
-                <i class="material-icons" id="minus_icon6">remove</i>
-            </div>
-
-            <!--            Titel-Balken-->
-            <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align">
-                <i class="material-icons">bar_chart</i><span> Vergleich</span>
+                 onclick='showfunction("vorteil6", "plus_icon6", "minus_icon6")'>
+                <i class="material-icons left">bar_chart</i>
+                Vergleich
+                <i class="material-icons plus" id="plus_icon6">add</i>
+                <i class="material-icons minus" id="minus_icon6">remove</i>
             </div>
 
             <div id="vorteil6" class="vorteile">
