--- a/components/Vorteile.html
+++ b/components/Vorteile.html
@@ -12,26 +12,33 @@
                     <div class="row">
                         <div class="col s2">
                             <div class="circle" id="umweltschutz_icon" onclick="jumptoadvantage('vorteile_container')">
-                                <img src="img/vorteile_images/icon_umweltschutz.png" class="iconimg">
+                                <i class="material-icons">local_florist</i>
                             </div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon2" onclick="jumptoadvantage('vorteil2')"><img
-                                    src="img/vorteile_images/icon_vorteil2.png"
-                                    class="iconimg">
+                            <div class="circle" id="vorteile_icon2" onclick="jumptoadvantage('vorteil2')">
+                                <i class="material-icons left">power</i>
                             </div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon3" onclick="jumptoadvantage('vorteil3')"></div>
+                            <div class="circle" id="vorteile_icon3" onclick="jumptoadvantage('vorteil3')">
+                                <i class="material-icons left">build</i>
+                            </div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon4" onclick="jumptoadvantage('vorteil4')"></div>
+                            <div class="circle" id="vorteile_icon4" onclick="jumptoadvantage('vorteil4')">
+                                <i class="material-icons left">directions_bus</i>
+                            </div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon5" onclick="jumptoadvantage('vorteil5')"></div>
+                            <div class="circle" id="vorteile_icon5" onclick="jumptoadvantage('vorteil5')">
+                                <i class="material-icons left">star</i>
+                            </div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon6" onclick="jumptoadvantage('vorteil6')"></div>
+                            <div class="circle" id="vorteile_icon6" onclick="jumptoadvantage('vorteil6')">
+                                <i class="material-icons left">bar_chart</i>
+                            </div>
                         </div>
 
                     </div>
