--- a/css/style.css
+++ b/css/style.css
@@ -420,6 +420,13 @@ table{
     margin-bottom: 2rem;
 }
 
+#vorteile_icons .material-icons{
+  font-size: 50px;
+  color: white;
+  margin-left: 15px;
+  margin-top: 15px;
+}
+
 /*--------------------Grössenanpassungen-----------------------*/
 
 @media only screen and (max-width : 600px) {
