fixed everything :D almost

--- a/components/Vorteile.html
+++ b/components/Vorteile.html
@@ -52,7 +52,7 @@
 
             <!--            Vorteil 1-->
             <div class="blue2 blue1-text text-light2 vorteileBox fontSizeStandartTitle left-align showhide"
-                 onclick='showfunction("umweltschutz", "plus_icon1", "minus_icon1")'>
+                 onclick='showfunction("vorteil1", "plus_icon1", "minus_icon1")'>
                 <i class="material-icons left">local_florist</i>
                 Umweltschonend
                 <i class="material-icons plus" id="plus_icon1">add</i>
@@ -104,6 +104,7 @@
 
             <div id="vorteil2" class="vorteile">
                 <div class="row">
+                    <div class="col s12 m12 l6">
                     <p>
                         Der AXK800T verdichtet effizient in zwei Stufen.
                         Nach der Komprimierung in der Niederdruckstufe erfolgt eine intensive Zwischenkühlung der Luft.
@@ -115,6 +116,10 @@
                         wird im Arbeitsraum immer der eingebaute Druck erzeugt.
                         Öleingespritzten Kompressoren benötigen zudem ein Teil der Antriebsenergie zur Aufrechterhaltung des Ölkreislaufes.
                     </p>
+                    </div>
+                    <div class="col s12 m12 l6">
+                        <img id="energie_img" src="img/vorteile_images/energieeffizient/wind-farm.jpg">
+                    </div>
                 </div>
             </div>
 
@@ -191,6 +196,9 @@
                         Ob Neufahrzeug oder Modernisierung, mit einem Ansaugvolumen von 850 Liter/min ist der AXK800T mit einer Einbauhöhe
                         von 305mm und einem Kompressorgewicht von 42kg speziell für diese Anwendungen konzipiert.
                     </p>
+                </div>
+                <div class="row">
+                    <img id="abstell" src="img/vorteile_images/integration/abstellanlage.jpg">
                 </div>
             </div>
 
