--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,13 @@ table{
   margin-top: 15px;
 }
 
+#energie_img, #abstell {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  margin-top: 10px;
+}
+
 /*--------------------Grössenanpassungen-----------------------*/
 
 @media only screen and (max-width : 600px) {
@@ -456,7 +463,7 @@ table{
 
 @media only screen and (min-width: 992px) {
   .plus, .minus {
-    display: none;
+    display: none !important;
   }
 
 }
